...
    data object Settings : AuthenticatorNavBarTab() {
        override val iconResSelected get() = BitwardenDrawable.ic_settings_filled
        override val iconRes get() = BitwardenDrawable.ic_settings
        override val labelRes get() = BitwardenString.settings
        override val graphRoute get() = SettingsGraphRoute
        override val startDestinationRoute get() = SettingsRoute
        override val testTag get() = "SettingsTab"
        override val notificationCount: Int get() = 0
    }
}

/**
 * Determine if the current destination is the same as the given tab.
...
